--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
         <span class="links">
             <h3 class="navlink" id="aboutpage" onclick="switchPage(event, 'About')"> About </h3>
-            <h3 class="navlink" onclick="switchPage(event, 'Projects')"> Projects </h3>
-            <h3 class="navlink" onclick="switchPage(event, 'Artwork')"> Artwork </h3>
-            <h3 class="navlink" onclick="switchPage(event, 'Contact')"> Contact </h3>
+            <h3 class="navlink" id="projectspage" onclick="switchPage(event, 'Projects')"> Projects </h3>
+            <h3 class="navlink" id="artworkpage" onclick="switchPage(event, 'Artwork')"> Artwork </h3>
+            <h3 class="navlink" id="contactpage" onclick="switchPage(event, 'Contact')"> Contact </h3>
         </span>
     </div>
 
@@ -57,41 +57,50 @@
 
         <div class="maingallery">
             <h3>PORTRAITS</h3>
-            <div class="galleryrow">
-                <img class="galleryimage" src="artwork/A Waltz with the Cosmos.jpeg"/>
-                <img class="galleryimage" src="artwork/Shinigami.jpeg"/>
-                <img class="galleryimage" src="artwork/Chrissy Boi.jpeg"/>
-            </div>
-            <div class="galleryrow">
-                <img class="galleryimage" src="artwork/debbie golden.jpeg"/>
-                <img class="galleryimage" src="artwork/Head in the Clouds.jpeg"/>
-                <img class="galleryimage" src="artwork/Kumquat Kids.jpeg"/>
-            </div>
-            <div class="galleryrow">
-                <img class="galleryimage" src="artwork/baby rainbow.jpeg"/>
-                <img class="galleryimage" src="artwork/The Wrath of Laplace's Demon.jpeg"/>
-                <img class="galleryimage" src="artwork/Wavetrain.jpeg"/>
+            <div class="portraitgallery">
+                <img class="activeimage" id="portrait" src=""/>
+                <div class="galleryrow" id="portrait">
+                    <img class="galleryimage" src="artwork/A Waltz with the Cosmos.jpeg"/>
+                    <img class="galleryimage" src="artwork/Head in the Clouds.jpeg"/>
+                    <img class="galleryimage" src="artwork/Kumquat Kids.jpeg"/>
+                </div>
+                <div class="galleryrow" id="portrait">
+                    <img class="galleryimage" src="artwork/debbie golden.jpeg"/>
+                    <img class="galleryimage" src="artwork/Shinigami.jpeg"/>
+                    <img class="galleryimage" src="artwork/Chrissy Boi.jpeg"/>
+                </div>
+                <div class="galleryrow" id="portrait">
+                    <img class="galleryimage" src="artwork/baby rainbow.jpeg"/>
+                    <img class="galleryimage" src="artwork/The Wrath of Laplace's Demon.jpeg"/>
+                    <img class="galleryimage" src="artwork/Wavetrain.jpeg"/>
+                </div>
             </div>
 
             <h3>SURREAL</h3>
-            <div class="galleryrow">
-                <img class="galleryimage" src="artwork/eyes sci fi.jpeg"/>
-                <img class="galleryimage" src="artwork/Remote (not in) Control .jpeg"/>
-                <img class="galleryimage" src="artwork/Viva drawing.jpeg"/>
-            </div>
-            <div class="galleryrow">
-                <img class="galleryimage" src="artwork/Hopscotch .jpeg"/>
-                <img class="galleryimage" src="artwork/Vision .jpg"/>
-            </div>
-            <div class="galleryrow">
-                <img class="galleryimagelong" src="artwork/A Valley in Shadow.jpeg"/>
-                <img class="galleryimagelong" src="artwork/Happy Nights call for Dreary Days.jpeg"/>
-                <img class="galleryimagelong" src="artwork/Words I Thought I'd Never Speak.jpeg"/>
+            <div class="surrealgallery">
+                <img class="activeimage" id="surreal" src=""/>
+                <div class="galleryrow" id="surreal">
+                    <img class="galleryimage" src="artwork/eyes sci fi.jpeg"/>
+                    <img class="galleryimage" src="artwork/Remote (not in) Control .jpeg"/>
+                    <img class="galleryimage" src="artwork/Viva drawing.jpeg"/>
+                </div>
+                <div class="galleryrow" id="surreal">
+                    <img class="galleryimage" src="artwork/Hopscotch .jpeg"/>
+                    <img class="galleryimage" src="artwork/Vision .jpg"/>
+                </div>
+                <div class="galleryrow" id="surreal">
+                    <img class="galleryimagelong" src="artwork/A Valley in Shadow.jpeg"/>
+                    <img class="galleryimagelong" src="artwork/Happy Nights call for Dreary Days.jpeg"/>
+                    <img class="galleryimagelong" src="artwork/Words I Thought I'd Never Speak.jpeg"/>
+                </div>
             </div>
 
             <h3>EMBROIDERY</h3>
-            <div class="galleryrow">
-                <img class="galleryimagelong" src="artwork/knight embroidery 1.jpg"/>
+            <div class="embroiderygallery">
+                <img class="activeimage" id="embroidery" src=""/>
+                <div class="galleryrow" id="embroidery">
+                    <img class="galleryimagelong" src="artwork/knight embroidery 1.jpg"/>
+                </div>
             </div>
         </div>
         
