completed contact page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div id="About" class="page">
         <h2 class="greeting">hello!</h2>
-        <img class="aboutimage" src="house.gif"/>
+        <img class="pageimage" src="house.gif"/>
         <p><span class='date-time'></span>.</p>
 
         <p>
@@ -41,7 +41,8 @@
     </div>
 
     <div id="Projects" class="page">
-        <h2 class="greeting">Projects!</h2>
+        <h2 class="greeting">projects</h2>
+        <img class="pageimage" src="computer.gif"/>
         <p><span class='date-time'></span>.</p>
 
         <p>
@@ -52,7 +53,7 @@
 
     <div id="Artwork" class="page">
         <h2 class="greeting">artwork</h2>
-        <img class="artworkimage" src="welcome3gk.gif"/>
+        <img class="pageimage" src="paint.gif"/>
         <p><span class='date-time'></span>.</p>
 
         <div class="maingallery">
@@ -103,16 +104,23 @@
                 </div>
             </div>
         </div>
-        <img class="artworkimage" src="dividermorao.gif"/>
     </div>
 
     <div id="Contact" class="page">
-        <h2 class="greeting">Contact!</h2>
+        <h2 class="greeting">contact</h2>
+        <img class="pageimage" src="palomail.gif"/>
         <p><span class='date-time'></span>.</p>
 
-        <p>
-            I build things for a living
-        </p>
+        <div class="contactdivider">*</div>
+
+        <p class="contactlink"><a target="_blank" href="mailto:17lbroudo@gmail.com"> E-MAIL </a></p>
+        <p class="contactlink"><a target="_blank" href="https://www.instagram.com/orchidjuice/"> INSTAGRAM </a></p>
+        <p class="contactlink"><a target="_blank" href="https://github.com/LeaBroudo"> GITHUB </a></p>
+        <p class="contactlink"><a target="_blank" href="https://www.linkedin.com/in/lea-broudo-265036170/"> LINKED-IN </a></p>
+
+        <div class="contactdivider">*</div>
+
+        <p class="contactmessage">Please contact me wherever!</p>
 
     </div>
     
