feat: format for projects

--- a/index.html
+++ b/index.html
@@ -69,7 +69,29 @@
             I build things for a living
         </p>
 
-       
+        <div class="galleryrow" id="portrait">
+            <div class="galleryproject">
+                <img class="projectimage" src="projects/payload_picture.png">
+                <div class="projecttext">Human Spaceflight and Vision Empairment Poster</div>
+            </div>            
+            <div class="galleryproject">
+                <img class="projectimage" src="projects/sketchsage.png">
+                <div class="projecttext">Sketch Sage Studio</div>
+            </div>   
+        </div>
+
+        <!--Zocdoc-->
+
+        <!--Oculus Start Holo brawl-->
+        <!--Curve-->
+
+        <!--Ray tracer-->
+        <!--path tracer-->
+        <!--shaders-->
+
+        <!--sine ar-->
+        <!--on a roll-->
+        <!--tower defense-->
 
     </div>
 
@@ -138,6 +160,8 @@
                     <img class="galleryimagelong" src="artwork/embroidered_bird.png" onclick="openModal(event, 'artModal', 'Bird Study', 'artwork/embroidered_bird.png')"/>
                 </div>
             </div>
+
+            <!--pottery!!-->
         </div>
     </div>
 
