feat: formatted pages

--- a/index.html
+++ b/index.html
@@ -35,27 +35,27 @@
     <div id="About" class="page">
         <h2 class="greeting">about</h2>
         <img class="pageimage" src="house.gif"/>
-        <p><span class='date-time'></span>.</p>
-        <div class="aboutinfo">
+        <div class='date-time'><span></span>.</div>
+        <div class="contactdivider">*</div>
 
-        <div class="easyreading">
-            <p>
-                I'm Lea Broudo, a software engineer from New York.
-            </p>
-            <p>
-                Between 2014 and 2018 I taught myself to draw portraits, since I was interested in
-                being able to capture people's likeness on one page. After portraits, I began to
-                work on larger and more surreal scenes, as well as branch off into other mediums like
-                embroidery and pottery. You can check out some of my work here. 
-            </p>
-            <p>
-                While pursuing my undergrad at Columbia I learned to program, but realized
-                I could continue art within engineering. I specialized in computer graphics and vision, 
-                and worked on VR projects at Steven Feiner's Computer Graphics and User Interfaces Lab.  
-                
-            </p>
-        </div>
-
+        <div class="info">
+            <div class="easyreading">
+                <p>
+                    I'm Lea Broudo, a software engineer from New York.
+                </p>
+                <p>
+                    Between 2014 and 2018 I taught myself to draw portraits, since I was interested in
+                    being able to capture people's likeness on one page. After portraits, I began to
+                    work on larger and more surreal scenes, as well as branch off into other mediums like
+                    embroidery and pottery. You can check out some of my work here. 
+                </p>
+                <p>
+                    While pursuing my undergrad at Columbia I learned to program, but realized
+                    I could continue art within engineering. I specialized in computer graphics and vision, 
+                    and worked on VR projects at Steven Feiner's Computer Graphics and User Interfaces Lab.  
+                    
+                </p>
+            </div>
         </div>
 
     </div>
@@ -63,9 +63,9 @@
     <div id="Projects" class="page">
         <h2 class="greeting">projects</h2>
         <img class="pageimage" src="computer.gif"/>
-        <p><span class='date-time'></span>.</p>
-
-        <p>
+        <div class='date-time'><span></span>.</div>
+        <div class="contactdivider">*</div>
+        <p class="easyreading">
             I build things for a living
         </p>
 
@@ -98,7 +98,12 @@
     <div id="Artwork" class="page">
         <h2 class="greeting">artwork</h2>
         <img class="pageimage" src="paint.gif"/>
-        <p><span class='date-time'></span>.</p>
+        <div class='date-time'><span></span>.</div>
+        <div class="contactdivider">*</div>
+
+        <p class="easyreading">
+            I draw things for a living
+        </p>
 
          <!-- The Modal -->
          <div id="artModal" class="modal">
@@ -167,15 +172,15 @@
 
     <div id="Contact" class="page">
         <h2 class="greeting">contact</h2>
-        <img class="pageimage" src="palomail.gif"/>
-        <p><span class='date-time'></span>.</p>
+        <img class="pageimage" style="margin-top:-4px; margin-bottom:4px" src="palomail.gif"/>
+        <div class='date-time'><span></span>.</div>
 
         <div class="contactdivider">*</div>
 
-        <p class="contactlink"><a target="_blank" href="mailto:17lbroudo@gmail.com"> E-MAIL </a></p>
-        <p class="contactlink"><a target="_blank" href="https://www.instagram.com/orchidjuice/"> INSTAGRAM </a></p>
-        <p class="contactlink"><a target="_blank" href="https://github.com/LeaBroudo"> GITHUB </a></p>
-        <p class="contactlink"><a target="_blank" href="https://www.linkedin.com/in/lea-broudo-265036170/"> LINKEDIN </a></p>
+        <h3 class="contactlink"><a target="_blank" href="mailto:17lbroudo@gmail.com"> E-MAIL </a></h3>
+        <h3 class="contactlink"><a target="_blank" href="https://www.instagram.com/orchidjuice/"> INSTAGRAM </a></h3>
+        <h3 class="contactlink"><a target="_blank" href="https://github.com/LeaBroudo"> GITHUB </a></h3>
+        <h3 class="contactlink"><a target="_blank" href="https://www.linkedin.com/in/lea-broudo-265036170/"> LINKEDIN </a></h3>
 
         <div class="contactdivider">*</div>
 
