feat: slightly better image modal resize

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h2 class="greeting">about</h2>
         <img class="pageimage" src="house.gif"/>
         <div class='date-time'><span></span>.</div>
-        <div class="contactdivider">*</div>
+        <div class="divider">*</div>
 
         <div class="info">
             <div class="easyreading">
@@ -64,7 +64,7 @@
         <h2 class="greeting">projects</h2>
         <img class="pageimage" src="computer.gif"/>
         <div class='date-time'><span></span>.</div>
-        <div class="contactdivider">*</div>
+        <div class="divider">*</div>
         <p class="easyreading">
             I build things for a living
         </p>
@@ -77,6 +77,21 @@
             <div class="galleryproject">
                 <img class="projectimage" src="projects/sketchsage.png">
                 <div class="projecttext">Sketch Sage Studio</div>
+            </div>   
+        </div>
+
+        <div class="galleryrow" id="portrait">
+            <div class="galleryproject">
+                <img class="projectimage" src="projects/payload_picture.png">
+                <div class="projecttext">Tree Generation</div>
+            </div>            
+            <div class="galleryproject">
+                <img class="projectimage" src="projects/sketchsage.png">
+                <div class="projecttext">Insect Garden</div>
+            </div>   
+            <div class="galleryproject">
+                <img class="projectimage" src="projects/sketchsage.png">
+                <div class="projecttext">Walter Model & Rig</div>
             </div>   
         </div>
 
@@ -99,7 +114,7 @@
         <h2 class="greeting">artwork</h2>
         <img class="pageimage" src="paint.gif"/>
         <div class='date-time'><span></span>.</div>
-        <div class="contactdivider">*</div>
+        <div class="divider">*</div>
 
         <p class="easyreading">
             I draw things for a living
@@ -115,8 +130,8 @@
                     <h2 class="modal-header-text">Modal Header</h2>
                  </div>
                  <div class="modal-body">
-                    <img class="modal-img" src=""/>
                  </div>
+                 <img class="modal-img" src=""/>
              </div>
          </div>
 
@@ -175,14 +190,14 @@
         <img class="pageimage" style="margin-top:-4px; margin-bottom:4px" src="palomail.gif"/>
         <div class='date-time'><span></span>.</div>
 
-        <div class="contactdivider">*</div>
+        <div class="divider">*</div>
 
         <h3 class="contactlink"><a target="_blank" href="mailto:17lbroudo@gmail.com"> E-MAIL </a></h3>
         <h3 class="contactlink"><a target="_blank" href="https://www.instagram.com/orchidjuice/"> INSTAGRAM </a></h3>
         <h3 class="contactlink"><a target="_blank" href="https://github.com/LeaBroudo"> GITHUB </a></h3>
         <h3 class="contactlink"><a target="_blank" href="https://www.linkedin.com/in/lea-broudo-265036170/"> LINKEDIN </a></h3>
 
-        <div class="contactdivider">*</div>
+        <div class="divider">*</div>
 
         <p class="contactmessage">Please contact me wherever!</p>
 
