feat: better resizing for now

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                     <span class="close" onclick="closeModal(event)">x</span>
                     <h2 class="modal-header-text">Modal Header</h2>
                  </div>
-                 <div class="modal-body">
-                 </div>
+                 <!-- <div class="modal-body">
+                 </div> -->
                  <img class="modal-img" src=""/>
              </div>
          </div>
