--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         <div class="galleryrow" id="portrait">
             <div class="galleryproject">
-                <img class="projectimage" src="projects/payload_picture.png">
+                <img class="projectimage" src="projects/tree_generation.png">
                 <div class="projecttext">Tree Generation</div>
             </div>            
             <div class="galleryproject">
@@ -90,8 +90,34 @@
                 <div class="projecttext">Insect Garden</div>
             </div>   
             <div class="galleryproject">
-                <img class="projectimage" src="projects/sketchsage.png">
+                <img class="projectimage" src="projects/model_rig.jpg">
                 <div class="projecttext">Walter Model & Rig</div>
+            </div>   
+        </div>
+
+        <div class="galleryrow" id="portrait">
+            <div class="galleryproject">
+                <img class="projectimage" src="projects/payload_picture.png">
+                <div class="projecttext">Human Spaceflight and Vision Empairment Poster</div>
+            </div>            
+            <div class="galleryproject">
+                <img class="projectimage" src="projects/sketchsage.png">
+                <div class="projecttext">Sketch Sage Studio</div>
+            </div>   
+        </div>
+
+        <div class="galleryrow" id="portrait">
+            <div class="galleryproject">
+                <img class="projectimage" src="projects/tree_generation.png">
+                <div class="projecttext">Sine AR</div>
+            </div>            
+            <div class="galleryproject">
+                <img class="projectimage" src="projects/sketchsage.png">
+                <div class="projecttext">On a Roll</div>
+            </div>   
+            <div class="galleryproject">
+                <img class="projectimage" src="projects/model_rig.jpg">
+                <div class="projecttext">Tower Defense</div>
             </div>   
         </div>
 
@@ -100,9 +126,6 @@
         <!--Oculus Start Holo brawl-->
         <!--Curve-->
 
-        <!--Ray tracer-->
-        <!--path tracer-->
-        <!--shaders-->
 
         <!--sine ar-->
         <!--on a roll-->
