--- a/index.html
+++ b/index.html
@@ -71,53 +71,53 @@
 
         <div class="galleryrow" id="portrait">
             <div class="galleryproject">
-                <img class="projectimage" src="projects/payload_picture.png">
-                <div class="projecttext">Human Spaceflight and Vision Empairment Poster</div>
-            </div>            
+                <div class="projecttext">Holo Brawl VR</div>
+                <img class="projectimage" src="projects/gameImages/holobrawlgif.gif">
+            </div>           
             <div class="galleryproject">
-                <img class="projectimage" src="projects/sketchsage.png">
-                <div class="projecttext">Sketch Sage Studio</div>
-            </div>   
-        </div>
-
-        <div class="galleryrow" id="portrait">
-            <div class="galleryproject">
-                <img class="projectimage" src="projects/tree_generation.png">
-                <div class="projecttext">Tree Generation</div>
-            </div>            
-            <div class="galleryproject">
-                <img class="projectimage" src="projects/sketchsage.png">
-                <div class="projecttext">Insect Garden</div>
+                <div class="projecttext">Collaborative Urban Virtual Environment (CURVE)</div>
+                <img class="projectimage" src="projects/pinboard.gif">
             </div>   
             <div class="galleryproject">
-                <img class="projectimage" src="projects/model_rig.jpg">
-                <div class="projecttext">Walter Model & Rig</div>
-            </div>   
-        </div>
-
-        <div class="galleryrow" id="portrait">
-            <div class="galleryproject">
-                <img class="projectimage" src="projects/payload_picture.png">
-                <div class="projecttext">Human Spaceflight and Vision Empairment Poster</div>
-            </div>            
-            <div class="galleryproject">
-                <img class="projectimage" src="projects/sketchsage.png">
-                <div class="projecttext">Sketch Sage Studio</div>
-            </div>   
-        </div>
-
-        <div class="galleryrow" id="portrait">
-            <div class="galleryproject">
-                <img class="projectimage" src="projects/tree_generation.png">
                 <div class="projecttext">Sine AR</div>
+                <img class="projectimage" src="projects/sine_ar.gif">
+            </div>            
+        </div>
+
+        <div class="galleryrow" id="portrait">
+            <div class="galleryproject">
+                <div class="projecttext">Ray Tracer</div>
+                <img class="projectimage" src="projects/lights and balls cropped.jpg">
             </div>            
             <div class="galleryproject">
-                <img class="projectimage" src="projects/sketchsage.png">
-                <div class="projecttext">On a Roll</div>
+                <div class="projecttext">Shaders</div>
+                <img class="projectimage" src="projects/shader/rainbow.gif">
+            </div>   
+        </div>
+
+        <div class="galleryrow" id="portrait">
+            <div class="galleryproject">
+                <div class="projecttext">Tree Generation</div>
+                <img class="projectimage" src="projects/tree_generation.png">
+            </div>            
+            <div class="galleryproject">
+                <div class="projecttext">Insect Garden</div>
+                <img class="projectimage" src="projects/insects/bug_26.jpg">
             </div>   
             <div class="galleryproject">
+                <div class="projecttext">Walter Model & Rig</div>
                 <img class="projectimage" src="projects/model_rig.jpg">
-                <div class="projecttext">Tower Defense</div>
+            </div>   
+        </div>
+
+        <div class="galleryrow" id="portrait">
+            <div class="galleryproject">
+                <div class="projecttext">Human Spaceflight and Vision Empairment Poster</div>
+                <img class="projectimage" src="projects/payload_picture.png">
+            </div>            
+            <div class="galleryproject">
+                <div class="projecttext">Sketch Sage Studio</div>
+                <img class="projectimage" src="projects/sketchsage.png">
             </div>   
         </div>
 
