better sized img

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <div>
                 <div class="galleryrow" id="embroidery">
                     <img class="galleryimagelong" src="artwork/knight embroidery 1.jpg" onclick="openModal(event, 'artModal', 'Encounter the Couple', 'artwork/knight embroidery 1.jpg')"/>
-                    <img class="galleryimagelong" src="artwork/embroidered_bird.png" onclick="openModal(event, 'artModal', 'Bird Study', 'artwork/embroidered_bird.png')"/>
+                    <img class="galleryimage" src="artwork/embroidered_bird.png" onclick="openModal(event, 'artModal', 'Bird Study', 'artwork/embroidered_bird.png')"/>
                 </div>
             </div>
 
