feat: no scroll when modal open

--- a/index.html
+++ b/index.html
@@ -84,12 +84,18 @@
                         <p>
                             HoloBrawl is a VR board game that allows players to personally interact with their pieces. 
                             Pieces squirm when picked up, and have personalities of their own! The objective of the game 
-                            is to kill all of your AI opponent’s pieces before they kill yours. Players must move their 
+                            is to kill all of your AI opponent’s pieces before they kill yours. 
+                        </p>
+                        <p>
+                            Players must move their 
                             pieces to an opponent’s tile to attack them. Each piece has an attack and defense score, and 
                             if the difference between the attacker’s attack score and the defense’s defense score is big 
                             enough, with a bit of chance the attacker will kill the defense piece. Given different pairings 
                             of these scores, pieces can also be counter-killed or pushed to a new tile.
                         </p>
+                        <video>
+                            <source src="projects/holobrawl/HoloBrawlAlphaGameplay.mp4" type="video/mp4">
+                        </video>
                     </div>
                 </div>
             </div>
@@ -98,7 +104,7 @@
         <div class="galleryrow" id="portrait">
             <div class="galleryproject">
                 <div class="projecttext">Holo Brawl VR</div>
-                <img class="projectimage" src="projects/gameImages/holobrawlgif.gif" onclick="openModal(event, 'projectModal', 'Holo Brawl VR', null, 'holobrawl')">
+                <img class="projectimage" src="projects/holobrawl/holobrawlgif.gif" onclick="openModal(event, 'projectModal', 'Holo Brawl VR', null, 'holobrawl')">
                 <p class="easyreading projectinfo">
                     Oculus Quest board game using hand tracking. 
                     I'm currently developing it further as part of the Oculus Start Program!
