feat: nice holobrawl modal

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                    <h2 class="modal-header-text">Modal Header</h2>
                 </div>
                 <img class="modal-img" src=""/>
-                <div class="modal-body">
+                <div class="modal-body easyreading">
                     <div class="modal-meat" id="holobrawl">
                         <p>
                             HoloBrawl is a VR board game that allows players to personally interact with their pieces. 
@@ -93,9 +93,56 @@
                             enough, with a bit of chance the attacker will kill the defense piece. Given different pairings 
                             of these scores, pieces can also be counter-killed or pushed to a new tile.
                         </p>
-                        <video>
-                            <source src="projects/holobrawl/HoloBrawlAlphaGameplay.mp4" type="video/mp4">
-                        </video>
+                        <div class="galleryrow"> 
+                            <div class="modal-video-item">
+                                <video class="modal-video" muted autoplay controls>
+                                    <source src="projects/holobrawl/HoloBrawlAlphaUI.mp4" type="video/mp4">
+                                </video>
+                                <p class="modal-item-info">
+                                    User Interface
+                                </p>
+                            </div>
+                            <div class="modal-video-item">
+                                <video class="modal-video" muted autoplay controls>
+                                    <source src="projects/holobrawl/HoloBrawlAlphaGameplay.mp4" type="video/mp4">
+                                </video>
+                                <p class="modal-item-info">
+                                    Gameplay
+                                </p>
+                            </div>
+                        </div>
+                        <div class="galleryrow" id="portrait">
+                            <div class="modal-item">
+                                <img class="modalimage" src="projects/holobrawl/using-ui.png" />
+                                <p class="modal-item-info">
+                                    using the game's user interface
+                                </p>
+                            </div>
+                            <div class="modal-item">
+                                <img class="modalimage" src="projects/holobrawl/pieces-puching.png" />
+                                <p class="modal-item-info">
+                                    Pieces punching eachother
+                                </p>
+                            </div>
+                            <div class="modal-item">
+                                <img class="modalimage" src="projects/holobrawl/piecing-fighting.png" />
+                                <p class="modal-item-info">
+                                    Pieces fighting eachother
+                                </p>
+                            </div>
+                            <div class="modal-item">
+                                <img class="modalimage" src="projects/holobrawl/placing-piece-to-attack.png" />
+                                <p class="modal-item-info">
+                                    Player placing their piece to attack opponent
+                                </p>
+                            </div>
+                            <div class="modal-item">
+                                <img class="modalimage" src="projects/holobrawl/placing-piece.png" />
+                                <p class="modal-item-info">
+                                    Player moving their piece
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
